crates/mwl-ir/src/lower/snapshots/mwl_ir__lower__tests__a_positional_element_after_an_explicit_key_keeps_its_own_position_counter.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-4:33
    v1 = array.new []  ; array
    v2 = const.str "0"  ; string
    v3 = const.int 1  ; int
    v4 = array.set v1, v2, v3  ; array
    v5 = const.str "k"  ; string
    v6 = const.int 2  ; int
    v7 = array.set v4, v5, v6  ; array
    v8 = const.str "1"  ; string
    v9 = const.int 3  ; int
    v10 = array.set v7, v8, v9  ; array
    release v10
    release v0
    return
}
