crates/mwl-ir/src/lower/snapshots/mwl_ir__lower__tests__a_spread_array_element_lowers.snap
---
source: crates/mwl-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-4:20
    v1 = const.int 1  ; int
    v2 = array.new ["0": v1]  ; array
    ; stmt s1 @5:5-5:24
    v3 = array.new []  ; array
    v4 = array.spread v3, v2 ! bb1  ; array
    release v2
    release v4
    release v0
    return
  bb1:
    release v3
    release v2
    release v0
    propagate "m() at t.mwl:5"
}
